# terraform-project-main

./: .gitignore  README.md
basic-terra/: README.md  backend.tf  config.sh  delete.sh  main.tf  userdata.sh
best-practices/: README.md  backend.tf  main.tf
cognee-flask/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  testing_cognee.py
cognee-flask/static/: graph_visualization.html
cognee-flask/static/css/: styles.css
cognee-flask/static/js/: scripts.js
cognee-flask/templates/: index.html  results.html
cognee-flask/terra-config/: default_config.tf  get_ip.sh  main.tf  provider.tf
terra-mistakes/: main.tf  output.tf  variables.tf
terra-modules/: README.md  main.tf  output.tf  variables.tf
terra-modules/modules/ec2/: index.html  main.tf  output.tf  variables.tf
terra-modules/modules/security-group/: main.tf  output.tf  variables.tf
terra-modules/modules/vpc/: main.tf  output.tf  variables.tf
terraform-workspace-s3/: README.md  create.sh  delete.sh  main.tf  output.tf  provider.tf
terraform-workspace-s3/index/: error.html
two-tier-app/: README.md
two-tier-app/scripts/: commands.md  config.sh  delete.sh
two-tier-app/terra-config/: alb.tf  asg_launch_templates.tf  backend.tf  data.tf  iam.tf  outputs.tf  rds.tf  security_groups.tf  userdata.tpl  variables.tf  vpc.tf
